// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wrap text > basic 1`] = `
{
  "doc": "[text](url)",
  "selection": {
    "main": 0,
    "ranges": [
      {
        "anchor": 0,
        "head": 11,
      },
    ],
  },
}
`;

exports[`wrap text > basic 2`] = `
{
  "doc": "text",
  "selection": {
    "main": 0,
    "ranges": [
      {
        "anchor": 0,
        "head": 4,
      },
    ],
  },
}
`;

exports[`wrap text > with same prefix and suffix 1`] = `
{
  "doc": "*text*",
  "selection": {
    "main": 0,
    "ranges": [
      {
        "anchor": 0,
        "head": 6,
      },
    ],
  },
}
`;

exports[`wrap text > with same prefix and suffix 2`] = `
{
  "doc": "text",
  "selection": {
    "main": 0,
    "ranges": [
      {
        "anchor": 0,
        "head": 4,
      },
    ],
  },
}
`;

exports[`wrap text > with selection 1`] = `
{
  "doc": "t[ex](url)t",
  "selection": {
    "main": 0,
    "ranges": [
      {
        "anchor": 1,
        "head": 10,
      },
    ],
  },
}
`;

exports[`wrap text > with selection 2`] = `
{
  "doc": "text",
  "selection": {
    "main": 0,
    "ranges": [
      {
        "anchor": 1,
        "head": 3,
      },
    ],
  },
}
`;
